--- a/HomeManager/View/ToDo/ucTodo.xaml
+++ b/HomeManager/View/ToDo/ucTodo.xaml
@@ -78,7 +78,7 @@
             VerticalAlignment="Stretch"
             BorderBrush="Gray"
             BorderThickness="1"
-            ItemsSource="{Binding MijnCollectieTodoPopup}"
+            ItemsSource="{Binding Source={StaticResource VML}, Path=TodoPopupViewModel.MijnCollectie, UpdateSourceTrigger=PropertyChanged}"
             SelectedItem="{Binding MijnSelectedItemTodoPopup, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
             <ListView.ItemTemplate>
                 <DataTemplate>
@@ -168,7 +168,7 @@
             Grid.Column="2"
             BorderBrush="Gray"
             BorderThickness="1"
-            ItemsSource="{Binding MijnTodoDetails}"
+            ItemsSource="{Binding Source={StaticResource VML}, Path=TodoDetailsViewModel.MijnTodoDetails, UpdateSourceTrigger=PropertyChanged}"
             SelectedItem="{Binding MijnSelectedTodoDetail, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
             <ListView.ItemTemplate>
                 <DataTemplate>
