Ik heb een style gemaakt voor de errorhandling te maken.

--- a/HomeManager/App.xaml
+++ b/HomeManager/App.xaml
@@ -14,7 +14,8 @@
             in de resource kan maar 1 dictionary staan dus we mergen al de resources.
             Aangezien ze in de app file staan zijn de key's van de resources over heel het project aanspreekbaar
         -->
-
+        
+       
 
         <ResourceDictionary>
 
@@ -26,6 +27,8 @@
 
 
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="\Resources\ErrorTemplateDictionary.xaml" />
+                <ResourceDictionary Source="\Resources\StaticStyleDictionary.xaml" />
                 <ResourceDictionary Source="\Resources\BrushesDictionary.xaml" />
                 <ResourceDictionary Source="\Resources\GeometryDrawingDictionary.xaml" />
                 <ResourceDictionary Source="\Resources\StyleHamburgerMenu.xaml" />
