--- a/HomeManager/View/Personen/ucEmailAdressen.xaml
+++ b/HomeManager/View/Personen/ucEmailAdressen.xaml
@@ -7,8 +7,8 @@
     xmlns:local="clr-namespace:HomeManager.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:uc="clr-namespace:HomeManager.View"
-    d:DesignHeight="200"
-    d:DesignWidth="500"
+    d:DesignHeight="300"
+    d:DesignWidth="800"
     Background="{StaticResource myBackground}"
     mc:Ignorable="d">
     <Grid DataContext="{Binding Source={StaticResource VML}, Path=EmailAdressenViewModel}">
@@ -58,11 +58,11 @@
             CornerRadius="5">
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="50" />
                     <ColumnDefinition Width="auto" />
                     <ColumnDefinition Width="auto" />
-                    <ColumnDefinition Width="200" />
-                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="250" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="35" />
@@ -108,26 +108,8 @@
                     DataContext="{Binding Source={StaticResource VML}, Path=EmailTypeViewModel}"
                     DisplayMemberPath="EmailTypeDisplayName"
                     ItemsSource="{Binding MijnCollectie}"
-                    SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.EmailTypeID, Mode=TwoWay}"
+                    SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.EmailTypeID, Mode=TwoWay,  UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                     SelectedValuePath="EmailTypeID" />
-
-                <!--<TextBlock
-                    x:Name="Persoon"
-                    Grid.Row="5"
-                    Grid.Column="2"
-                    Margin="5"
-                    Text="Persoon"
-                    TextAlignment="Right" />
-                <ComboBox
-                    x:Name="cboPersoon"
-                    Grid.Row="5"
-                    Grid.Column="3"
-                    Margin="5"
-                    DataContext="{Binding Source={StaticResource VML}, Path=PersoonViewModel}"
-                    DisplayMemberPath="PersoonDisplayName"
-                    ItemsSource="{Binding MijnCollectie}"
-                    SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.PersoonID, Mode=TwoWay}"
-                    SelectedValuePath="PersoonID" />-->
             </Grid>
         </Border>
     </Grid>
