--- a/HomeManager/View/Personen/ucPersoon.xaml
+++ b/HomeManager/View/Personen/ucPersoon.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Converters="clr-namespace:HomeManager.Converter"
+    xmlns:behaviors="clr-namespace:HomeManager.Behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:local="clr-namespace:HomeManager.View"
@@ -171,12 +172,14 @@
                         HorizontalAlignment="Left"
                         BorderBrush="Gray"
                         BorderThickness="1"
+                        AllowDrop="True"
+                        behaviors:clsDragDropBehavior.DropCommand="{Binding cmdDropPicture}"
                         CornerRadius="35">
                         <Border.Background>
                             <ImageBrush ImageSource="{Binding MijnSelectedItem.Foto, TargetNullValue={x:Null}}" Stretch="UniformToFill" />
                         </Border.Background>
                     </Border>
-                    <Button Command="{Binding cmdUploadPicture}" Style="{StaticResource UploadPersoonButton}" />
+                    <Button x:Name="btnUploadPicture" Command="{Binding cmdUploadPicture}" Style="{StaticResource UploadPersoonButton}" />
                 </StackPanel>
 
 
